# DGEB

./: .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  plot_benchmarks.py  pyproject.toml  requirements.txt  ruff.toml  run_geb.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
dgeb/: __init__.py  cli.py  dgeb.py  eval_utils.py  evaluators.py  modality.py  models.py  results.py
dgeb/tasks/: __init__.py  bigene_mining_tasks.py  classification_tasks.py  clustering_tasks.py  eds_tasks.py  pair_classification_tasks.py  retrieval_tasks.py  tasks.py
geb/: __init__.py  geb.py  results.py
geb/tasks/: classification_tasks.py  eds_tasks.py  retrieval_tasks.py  tasks.py
leaderboard/: .gitignore  README.md  app.py  requirements.txt
leaderboard/lib/: model.json  models.py  utils.py
leaderboard/submissions/esm2_t12_35M_UR50D/: MIBIG_protein_classification.json  arch_retrieval.json  bacarch_bigene.json  convergent_enzymes_classification.json  cyano_operonic_pair.json  ec_classification.json  ecoli_operonic_pair.json  euk_retrieval.json  fefe_phylogeny.json  modac_paralogy_bigene.json  mopb_clustering.json  noop.json  rpob_arch_phylogeny.json  rpob_bac_phylogeny.json  vibrio_operonic_pair.json
leaderboard/submissions/esm2_t30_150M_UR50D/: MIBIG_protein_classification.json  arch_retrieval.json  bacarch_bigene.json  convergent_enzymes_classification.json  cyano_operonic_pair.json  ec_classification.json  ecoli_operonic_pair.json  euk_retrieval.json  fefe_phylogeny.json  modac_paralogy_bigene.json  mopb_clustering.json  noop.json  rpob_arch_phylogeny.json  rpob_bac_phylogeny.json  vibrio_operonic_pair.json
leaderboard/submissions/esm2_t33_650M_UR50D/: MIBIG_protein_classification.json  arch_retrieval.json  bacarch_bigene.json  convergent_enzymes_classification.json  cyano_operonic_pair.json  ec_classification.json  ecoli_operonic_pair.json  euk_retrieval.json  fefe_phylogeny.json  modac_paralogy_bigene.json  mopb_clustering.json  noop.json  rpob_arch_phylogeny.json  rpob_bac_phylogeny.json  vibrio_operonic_pair.json
leaderboard/submissions/esm2_t36_3B_UR50D/: MIBIG_protein_classification.json  arch_retrieval.json  bacarch_bigene.json  convergent_enzymes_classification.json  cyano_operonic_pair.json  ec_classification.json  ecoli_operonic_pair.json  euk_retrieval.json  fefe_phylogeny.json  modac_paralogy_bigene.json  mopb_clustering.json  noop.json  rpob_arch_phylogeny.json  rpob_bac_phylogeny.json  vibrio_operonic_pair.json
leaderboard/submissions/esm2_t6_8M_UR50D/: MIBIG_protein_classification.json  arch_retrieval.json  bacarch_bigene.json  convergent_enzymes_classification.json  cyano_operonic_pair.json  ec_classification.json  ecoli_operonic_pair.json  euk_retrieval.json  fefe_phylogeny.json  modac_paralogy_bigene.json  mopb_clustering.json  noop.json  rpob_arch_phylogeny.json  rpob_bac_phylogeny.json  vibrio_operonic_pair.json
leaderboard/submissions/esm3_sm_open_v1/: arch_retrieval.json  (+14 more)
scripts/: eval_all_models.py  plot_benchmarks.py
(+153 files in other folders)
